[tool.poetry]
name = "buddyfinder"
version = "0.1.0"
description = ""
authors = ["Gal Zafar <theycallmefachfach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
python-dotenv = "^0.21.0"
praw = "^7.6.1"
numpy = "^1.24.1"
prisma = "^0.8.2"
pyright = "^1.1.299"
openai = {extras = ["embeddings"], version = "^0.27.2"}
matplotlib = "^3.7.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"